--- a/dev/tutorials/l_master.ipynb
+++ b/dev/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "29271c40",
+   "id": "8a9a4b05",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "915b4b4d",
+   "id": "4a4427f0",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "164b4d1b",
+   "id": "b45b444f",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3742533d",
+   "id": "d18ed572",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5da43493",
+   "id": "ba0a340e",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7be3e2db",
+   "id": "e1c9729d",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8c1b5361",
+   "id": "70af84f2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-27T11:58:38.917687Z",
-     "iopub.status.busy": "2025-08-27T11:58:38.917411Z",
-     "iopub.status.idle": "2025-08-27T11:58:41.843342Z",
-     "shell.execute_reply": "2025-08-27T11:58:41.842753Z"
+     "iopub.execute_input": "2025-09-02T08:26:18.785276Z",
+     "iopub.status.busy": "2025-09-02T08:26:18.785118Z",
+     "iopub.status.idle": "2025-09-02T08:26:21.840138Z",
+     "shell.execute_reply": "2025-09-02T08:26:21.839549Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a37c6d8f",
+   "id": "47a32fdd",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65aaa465",
+   "id": "4848413e",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2ab6c69",
+   "id": "c5cb9102",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00744457",
+   "id": "8b4cb48b",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe235bed",
+   "id": "343ddd69",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91433621",
+   "id": "f11c1c34",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a686e4ce",
+   "id": "cb720ef7",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb8bd665",
+   "id": "e7f61f39",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0a70e128",
+   "id": "64f4343b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-27T11:58:41.845486Z",
-     "iopub.status.busy": "2025-08-27T11:58:41.845194Z",
-     "iopub.status.idle": "2025-08-27T11:58:43.831300Z",
-     "shell.execute_reply": "2025-08-27T11:58:43.830762Z"
+     "iopub.execute_input": "2025-09-02T08:26:21.842281Z",
+     "iopub.status.busy": "2025-09-02T08:26:21.842010Z",
+     "iopub.status.idle": "2025-09-02T08:26:23.928522Z",
+     "shell.execute_reply": "2025-09-02T08:26:23.927962Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43c7b3cc",
+   "id": "c4ce85b5",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f429910f",
+   "id": "4e5299b6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-27T11:58:43.833143Z",
-     "iopub.status.busy": "2025-08-27T11:58:43.832958Z",
-     "iopub.status.idle": "2025-08-27T11:58:43.836333Z",
-     "shell.execute_reply": "2025-08-27T11:58:43.835749Z"
+     "iopub.execute_input": "2025-09-02T08:26:23.930383Z",
+     "iopub.status.busy": "2025-09-02T08:26:23.930200Z",
+     "iopub.status.idle": "2025-09-02T08:26:23.933553Z",
+     "shell.execute_reply": "2025-09-02T08:26:23.932860Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73685e34",
+   "id": "990be94b",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2da24d18",
+   "id": "461b10f5",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc2dd45c",
+   "id": "100d8e1f",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a7ce88f",
+   "id": "0436ba00",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "13ef6a6f",
+   "id": "290d0209",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-27T11:58:43.838069Z",
-     "iopub.status.busy": "2025-08-27T11:58:43.837901Z",
-     "iopub.status.idle": "2025-08-27T11:58:43.882668Z",
-     "shell.execute_reply": "2025-08-27T11:58:43.882051Z"
+     "iopub.execute_input": "2025-09-02T08:26:23.935342Z",
+     "iopub.status.busy": "2025-09-02T08:26:23.935163Z",
+     "iopub.status.idle": "2025-09-02T08:26:23.981831Z",
+     "shell.execute_reply": "2025-09-02T08:26:23.981286Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f2d10ee",
+   "id": "5919bb7e",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "db6245b6",
+   "id": "66fa5981",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-27T11:58:43.884479Z",
-     "iopub.status.busy": "2025-08-27T11:58:43.884280Z",
-     "iopub.status.idle": "2025-08-27T11:58:43.949754Z",
-     "shell.execute_reply": "2025-08-27T11:58:43.949202Z"
+     "iopub.execute_input": "2025-09-02T08:26:23.983560Z",
+     "iopub.status.busy": "2025-09-02T08:26:23.983384Z",
+     "iopub.status.idle": "2025-09-02T08:26:24.051982Z",
+     "shell.execute_reply": "2025-09-02T08:26:24.051442Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efcfc9ee",
+   "id": "bf0898ef",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70621268",
+   "id": "cca72c54",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "de92f462",
+   "id": "7738c9e1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-27T11:58:43.951535Z",
-     "iopub.status.busy": "2025-08-27T11:58:43.951338Z",
-     "iopub.status.idle": "2025-08-27T11:58:43.979042Z",
-     "shell.execute_reply": "2025-08-27T11:58:43.978404Z"
+     "iopub.execute_input": "2025-09-02T08:26:24.053805Z",
+     "iopub.status.busy": "2025-09-02T08:26:24.053605Z",
+     "iopub.status.idle": "2025-09-02T08:26:24.081756Z",
+     "shell.execute_reply": "2025-09-02T08:26:24.081251Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1dfe9950",
+   "id": "106cd3cb",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17d48539",
+   "id": "4f636bc1",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04c119d0",
+   "id": "2d86f53f",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "427bf7e5",
+   "id": "46bee6bd",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "610c0fe5",
+   "id": "ffbcb146",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "baa24fba",
+   "id": "b6415a21",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-27T11:58:43.980844Z",
-     "iopub.status.busy": "2025-08-27T11:58:43.980676Z",
-     "iopub.status.idle": "2025-08-27T11:58:43.984904Z",
-     "shell.execute_reply": "2025-08-27T11:58:43.984247Z"
+     "iopub.execute_input": "2025-09-02T08:26:24.083667Z",
+     "iopub.status.busy": "2025-09-02T08:26:24.083484Z",
+     "iopub.status.idle": "2025-09-02T08:26:24.087845Z",
+     "shell.execute_reply": "2025-09-02T08:26:24.087208Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5691237f",
+   "id": "dd4f9894",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8c6c7d78",
+   "id": "c46ea486",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-27T11:58:43.986581Z",
-     "iopub.status.busy": "2025-08-27T11:58:43.986390Z",
-     "iopub.status.idle": "2025-08-27T11:58:43.989385Z",
-     "shell.execute_reply": "2025-08-27T11:58:43.988729Z"
+     "iopub.execute_input": "2025-09-02T08:26:24.089557Z",
+     "iopub.status.busy": "2025-09-02T08:26:24.089390Z",
+     "iopub.status.idle": "2025-09-02T08:26:24.092262Z",
+     "shell.execute_reply": "2025-09-02T08:26:24.091798Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e0a59ba",
+   "id": "896d83c4",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e9b6f979",
+   "id": "e964d0a9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-27T11:58:43.991073Z",
-     "iopub.status.busy": "2025-08-27T11:58:43.990913Z",
-     "iopub.status.idle": "2025-08-27T11:58:46.574651Z",
-     "shell.execute_reply": "2025-08-27T11:58:46.574020Z"
+     "iopub.execute_input": "2025-09-02T08:26:24.093864Z",
+     "iopub.status.busy": "2025-09-02T08:26:24.093675Z",
+     "iopub.status.idle": "2025-09-02T08:26:26.691890Z",
+     "shell.execute_reply": "2025-09-02T08:26:26.691314Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecb16010",
+   "id": "55b410ce",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afd6dba4",
+   "id": "68107020",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "669eb573",
+   "id": "46c1479a",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29e23c34",
+   "id": "e984c344",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "cafed724",
+   "id": "95a80183",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-27T11:58:46.576526Z",
-     "iopub.status.busy": "2025-08-27T11:58:46.576303Z",
-     "iopub.status.idle": "2025-08-27T11:58:46.579869Z",
-     "shell.execute_reply": "2025-08-27T11:58:46.579252Z"
+     "iopub.execute_input": "2025-09-02T08:26:26.693842Z",
+     "iopub.status.busy": "2025-09-02T08:26:26.693642Z",
+     "iopub.status.idle": "2025-09-02T08:26:26.697340Z",
+     "shell.execute_reply": "2025-09-02T08:26:26.696701Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fdff8403880>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fea4542cd60>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d16ab473",
+   "id": "aca7621a",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3b7fc9c",
+   "id": "c19f1fc7",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10874ef4",
+   "id": "f2e03c48",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a76db42a",
+   "id": "4292ae71",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f4eb4234",
+   "id": "37fee34e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-27T11:58:46.581661Z",
-     "iopub.status.busy": "2025-08-27T11:58:46.581384Z",
-     "iopub.status.idle": "2025-08-27T11:58:46.584335Z",
-     "shell.execute_reply": "2025-08-27T11:58:46.583870Z"
+     "iopub.execute_input": "2025-09-02T08:26:26.698993Z",
+     "iopub.status.busy": "2025-09-02T08:26:26.698827Z",
+     "iopub.status.idle": "2025-09-02T08:26:26.701738Z",
+     "shell.execute_reply": "2025-09-02T08:26:26.701049Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d9c9f3ea",
+   "id": "6db53bbe",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-27T11:58:46.585842Z",
-     "iopub.status.busy": "2025-08-27T11:58:46.585673Z",
-     "iopub.status.idle": "2025-08-27T11:58:47.653501Z",
-     "shell.execute_reply": "2025-08-27T11:58:47.652887Z"
+     "iopub.execute_input": "2025-09-02T08:26:26.703437Z",
+     "iopub.status.busy": "2025-09-02T08:26:26.703274Z",
+     "iopub.status.idle": "2025-09-02T08:26:27.772953Z",
+     "shell.execute_reply": "2025-09-02T08:26:27.772347Z"
     }
    },
    "outputs": [
